tests/functional/lang/eval-fail-seq.err.exp
error:
       … while calling the 'seq' builtin
         at /pwd/lang/eval-fail-seq.bsd:1:1:
            1| builtins.seq (abort "foo") 2
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-seq.bsd:1:15:
            1| builtins.seq (abort "foo") 2
             |               ^
            2|

       error: evaluation aborted with the following error message: 'foo'
